# mangetsu

./: Cargo.toml  rustfmt.toml
src/: delegate.rs  main.rs
src/controller/: mod.rs  nav.rs
src/core/: cache.rs  chapter.rs  connector.rs  error.rs  global_api.rs  manga.rs  mod.rs  page.rs
src/core/websites/: manganel.rs  mod.rs
src/data/: cmd.rs  config.rs  download_job.rs  mod.rs  nav.rs
src/ui/: app.rs  chapter.rs  manga.rs  mod.rs  theme.rs
src/widgets/: async_delegate.rs  dynamic_sized_box.rs  future_widget.rs  grid.rs  hover.rs  icons.rs  link.rs  mod.rs  progress_bar.rs  stream_widget.rs  theme.rs  titlebar.rs  utils.rs
