[package]
name = "mangetsu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.4"
futures = "0.3.17"
tokio = { version= "1.11.0", features= ["full"] }
async-stream = "0.3.2"
scraper = "0.12.0"
regex = "1.5.4"
indexmap = "1.7.0"
once_cell = "1.8.0"
druid = { version = "0.7.0", features = ["im", "image", "jpeg", "png", "serde"] }
lru-cache = "0.1.2"
log = "0.4.11"
flume = "0.10.9"