[package]
name = "mangetsu"
version = "0.1.0"
edition = "2018"

[dependencies]
reqwest = "0.11.4"
futures = "0.3.17"
tokio = { version= "1.11.0", features= ["full"] }
async-stream = "0.3.2"
scraper = "0.12.0"
regex = "1.5.4"
indexmap = "1.7.0"
once_cell = "1.8.0"
druid = { version = "0.7.0", features = ["im", "image", "jpeg", "png", "serde"] }
lru-cache = "0.1.2"
log = "0.4.11"
flume = "0.10.9"
serde = { version = "1.0.129", features = ["derive", "rc"] }
serde_json = "1.0.66"
platform-dirs = "0.3.0"
sanitize-filename = "0.3.0"
verbatim = "0.1.1"
tracing = "0.1.22"